# osep_path_planner

./: .gitignore  README.md
data_publisher/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.sh
install/path_planning/share/path_planning/: package.sh
install/rosa_skeleton_extraction/share/rosa_skeleton_extraction/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rosa_skeleton_extraction/share/rosa_skeleton_extraction/cmake/: rosa_skeleton_extractionConfig.cmake
install/viewpoint_manager/share/viewpoint_manager/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/viewpoint_manager/share/viewpoint_manager/cmake/: viewpoint_managerConfig.cmake
log/: latest_build
osep_2d_map/: CMakeLists.txt  package.xml
osep_2d_map/include/: costmap_2d.hpp  path_interpolator.hpp
osep_2d_map/src/: costmap_2d_node.cpp  path_interpolator.cpp
osep_core/: CMakeLists.txt  package.xml
osep_core/launch/: osep_core.launch.py
osep_data_publisher/: CMakeLists.txt  package.xml
osep_data_publisher/src/: lidar_pub_node.cpp
osep_planning/: CMakeLists.txt  package.xml
osep_planning/include/: lkf_vertex_fuse.hpp  planner.hpp  viewpoint_manager.hpp
osep_planning/src/: planner.cpp  planner_main.cpp  planner_node.cpp  viewpoint_manager.cpp  viewpoint_manager_node.cpp
osep_rosa/: CMakeLists.txt  package.xml
osep_rosa/src/: extract_tools.cpp
osep_skeleton_decomp/: CMakeLists.txt  package.xml
osep_skeleton_decomp/include/: gskel.hpp  lkf_vertex_fuse.hpp  rosa.hpp  rosa_main.hpp
osep_skeleton_decomp/msg/: GlobalSkeleton.msg  Vertex.msg
osep_skeleton_decomp/src/: extract_tools.cpp  gskel.cpp  gskel_node.cpp  rosa.cpp  rosa_main.cpp  rosa_node.cpp  skel.cpp  skel_decomp_node.cpp
osep_viewpoint_manager/: CMakeLists.txt  package.xml
osep_viewpoint_manager/include/: viewpoint_main.hpp
path_planning/: package.xml
path_planning/src/: planner_node.cpp
rosa/: CMakeLists.txt  package.xml
rosa_skeleton_extraction/: CMakeLists.txt  package.xml
src/data_publisher/: CMakeLists.txt
src/path_planning/: CMakeLists.txt
src/path_planning/include/path_planning/: planner_main.hpp
src/path_planning/src/: planner_main.cpp
src/rosa_skeleton_extraction/: CMakeLists.txt
src/rosa_skeleton_extraction/include/rosa_skeleton_extraction/: extract_tools.hpp  rosa_main.hpp
src/rosa_skeleton_extraction/src/: rosa_main.cpp  rosa_node.cpp
src/viewpoint_manager/: CMakeLists.txt
